--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "PKCHelper"]
 	path = PKCHelper
-	url = git@github.com:yasuoyuhao/PKCHelper.git
+	url = https://github.com/yasuoyuhao/PKCHelper.git
